# chatspace

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DATA_PIPELINE_REFACTOR_PLAN.md  DEVELOPER_GUIDE.md  JOURNAL.md  LAZY_LOADING.md  MULTIPROCESSING_MIGRATION.md  OPTIMIZATION_FINDINGS.md  OPTIMIZATION_SUMMARY.md  PERSONA_DATASETS.md  README.md  REFACTORING_SUMMARY.md  STEERING_TRAINING_STATUS.md  VLLM_STEERING_NEXT_STEPS.md  VLLM_STEERING_USAGE.md  benchmark_cli_startup.sh  main.py  persona_data_notes.md  pyproject.toml  sitecustomize.py
bench_journal/: 2025-11-30-steerllm-compile-bench.md
chatspace/: cli.py  hf_embed.py  persona_to_hf.py
notebooks/: compare_steering_methods.ipynb  gemma2_attention_analysis.ipynb  gemma2_basic_weight_susceptibility.ipynb  gemma2_mlp_interpretation.ipynb  gemma2_weight_diff_pc_analysis.ipynb  vector_comparisons.ipynb  vllm_rollout_test.ipynb
runs/: qwen_rollout_scale_sweep.sh  steering_scheduler_traits_roles.sh  train_qwen3_steering.sh
scripts/: ISOLATED_BENCH_README.md  PRECISION_TESTING_README.md  analyze_benchmark_results.py  analyze_parity_sweeps.py  analyze_persona_token_counts.py  benchmark_high_batch.py  benchmark_hook_variants.py  benchmark_steering_compile.py  benchmark_steering_overhead.py  benchmark_vllm_capture.py  compare_activation_steering.py  compare_cap_deltas.py  debug_decode_precision.py  debug_vllm_engine_core.py  debug_vllm_structure.py  debug_vllm_v0_structure.py  eval_comprehensive_classifiers.py  eval_steering_as_classifier.py  generate_all_persona_datasets.py  generate_behavior_rollouts.py  hf_hidden_diff.py  hf_precision_eval.py  hf_sweep_with_captures.py  isolated_capture_bench.py  merge_token_stats.py  precision_eval.py  precision_sweep_with_captures.py  profile_capture_scaling.py  profile_fetch_overhead.py  rollout_scheduler_run.py  rollout_scheduler_run.sh  run_isolated_benchmarks.sh  steering_scheduler_run.py  steering_scheduler_run.sh  steering_smoke.py  sweep_learning_rates.py  test_gemma_patching.py  test_llama_steering.py  test_vllm_steering.py  train_all_steering.py  (+3 more)
steerllm/: README.md  __init__.py  pyproject.toml
steerllm/backends/vllm/: model.py  runtime.py
steerllm/tests/: test_steering_parity.py  test_vllm_integration.py
tests/: __init__.py  conftest.py  test_bucketing.py  test_capture_coalescing.py  test_capture_handle_lifecycle.py  test_config.py  test_dataset.py  test_gemma_vllm_steering.py  test_hidden_state_extraction.py  test_input_validation.py  test_legacy_pt_compat.py  test_llama_vllm_steering.py  test_metrics.py  test_model.py  test_rpc_timeouts.py  test_runtime_profiler.py  test_shared_memory_captures.py  test_shared_memory_cleanup_failures.py  test_steering_job.py  test_tp_steering_parity.py  test_utils.py  test_vllm_chat_activation_capture.py  test_vllm_comprehensive_integration.py  (+6 more)
(+29 files in other folders)
