[project]
dependencies = [
    "accelerate>=1.10.1",
    "dash>=2.18.0",
    "dash-bootstrap-components>=1.6.0",
    "datasets>=4.1.1",
    "flash-attn>=2.5.1",
    "huggingface-hub[hf-transfer]>=0.35.1",
    "openai>=1.109.1",
    "peft>=0.17.1",
    "plotly>=5.24.0",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.1",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.2",
    "trl>=0.23.1",
    "umap-learn>=0.5.7",
]
description = "Add your description here"
name = "chatspace"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[tool.uv]
package = true
preview = true

[tool.setuptools]
packages = ["chatspace"]

[tool.uv.extra-build-dependencies]
flash-attn = [ { requirement = "torch", match-runtime = true } ]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.scripts]
chatspace = "chatspace.cli:main"

[dependency-groups]
dev = [
 "ipykernel>=6.30.1",
 "ipywidgets>=8.1.7",
 "matplotlib>=3.10.6",
 "pytest>=8.4.2",
 "pytest-mock>=3.15.1",
]
